alignment corrected

--- a/style.css
+++ b/style.css
@@ -15,9 +15,7 @@ p{
     font-weight: 300;
     color: #111;
 }
-/* body{
-    min-height: 1000px;
-} */
+
 .banner{
     position: relative;
     width: 100%;
